stuck trying to log user data in appwrite loggin off for the night.

--- a/.env.local
+++ b/.env.local
@@ -9,4 +9,4 @@ VITE_APPWRITE_API_KEY=standard_f6fec5c7d3cdbe090c6a5d35c90228e55b76b1acbe7759806
 VITE_APPWRITE_DATABASE_ID=6838e5b000359b2e94db
 VITE_APPWRITE_USERS_COLLECTION_ID=6838e5c800091748ac7f
 VITE_APPWRITE_TRIPS_COLLECTION_ID=6838e5fb000a8b6059bb
-VITE_APPWRITE_API_ENDPOINT=https://cloud.appwrite.io/v1
+VITE_APPWRITE_API_ENDPOINT=https://fra.cloud.appwrite.io/v1
